fix(select): ensure long label don't overflow
fix #443

--- a/style/select.scss
+++ b/style/select.scss
@@ -79,20 +79,12 @@ $select: map.merge(
   }
 
   &__tag {
+    max-width: 100%;
     height: calc(get-css-var('input-height') - 8px);
     margin: 2px 4px;
     margin-inline-start: 0;
     pointer-events: auto;
     cursor: pointer;
-
-    // &--preview {
-    //   pointer-events: none;
-    //   opacity: 50%;
-    // }
-
-    // &--deleted {
-    //   text-decoration: line-through;
-    // }
   }
 
   &--disabled &__tag {
@@ -108,6 +100,10 @@ $select: map.merge(
 
   &__control &__tag + &__tag {
     margin-inline-start: 0;
+  }
+
+  &__rest-tip {
+    max-width: 100%;
   }
 
   &__anchor {
